syntax = "proto3";
package configpb;

message Config {
    AppConfig     app     = 1;
    NetworkConfig network = 2;
    LogConfig     log     = 3;
    DataConfig   data   = 4;
    AdvancedConfig advanced = 5; // Warning: Advanced settings can break compatibility.
    // Do not attempt to set them if you dont kown how they work.
}

message P2PConfig {
    string          seeds              = 1;
    repeated string add_peer           = 2;
    bool            skip_upnp          = 3;
    uint32          handshake_timeout  = 4;
    uint32          dial_timeout       = 5;
    bool            vault_mode         = 6;
    string          listen_address     = 7;
}

message APIConfig {
    string host         = 1;
    string grpc_port    = 2;
    string http_port    = 3;
    repeated string http_cors_addr = 4;
    bool disable_tls = 5;
    string rpc_cert     = 6;
    string rpc_key      = 7;
}

message NetworkConfig {
    P2PConfig p2p = 1;
    APIConfig api = 2;
}

message LogConfig {
    string log_dir       = 1;
    string log_level     = 2;
}

message AppConfig {
    string profile       = 1;
    string cpu_profile   = 2;
    bool   no_peer_bloom_filters = 3;
}

message DataConfig {
    string db_type  = 1;
    string db_dir = 2;
    string wallet_pub_pass = 3;
}

message AdvancedConfig {
    uint32 address_gap_limit = 1;
    uint32 max_unused_staking_address = 2;
    string max_tx_fee = 3; // never create transactions larger than max_tx_fee, floating fee(default: 1.0) in MASS
}